Comment out the .S file that asmjs does not understand.
The file would not include any actual assembly code, but the problem is
that emcc does not accept files with .S extension at all. And automake
output is platform-independent, so it always includes the files in
build.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -946,9 +946,9 @@ vector/output/cl_GV_number_aprint.cc \
 vector/output/cl_SV_aprint.cc \
 vector/output/cl_SV_number_aprint.cc
 
-nodist_libcln_la_SOURCES = \
-base/digitseq/cl_asm.S \
-polynomial/elem/cl_asm_GF2.S
+#nodist_libcln_la_SOURCES = \
+#base/digitseq/cl_asm.S \
+#polynomial/elem/cl_asm_GF2.S
 
 
 ASMFILES = \
